<resources>
    <string name="app_name">KuisSederhana</string>
    <string name="club_sepak_bola_yang_memenangkan_liga_champions_adalah">Club sepak bola yang memenangkan liga champions adalah :</string>
    <string name="real_madrid">Real Madrid</string>
    <string name="liverpool">Liverpool</string>
    <string name="barcelona">Barcelona</string>
    <string name="juventus">Juventus</string>
    <string name="jurusan_fakultas_teknik_tebaik_di_universitas_yudharta">jurusan fakultas teknik tebaik di universitas yudharta adalah...?</string>
    <string name="tenik_informatika">teknik informatika</string>
    <string name="taknik_mesin">teknik mesin</string>
    <string name="teknik_industrii">teknik industri</string>
    <string name="teknik_sipil">teknik sipil</string>
</resources>
